syntax = "proto3";
package wit.control;

message Empty {}

message Function {
  bytes id = 1;
  bytes body = 2;
}

message Rule {
  string spec = 1;
  bytes funid = 2;
}

message StaticData {
  Function function = 1;
  Rule rule = 2;
}

message Event {
  string spec = 1;
  bytes data = 2;
}

message Invoke {
  bytes funid = 1;
  bytes funbody = 2;
  Event event = 3;
}

message InvokeResult {
  bytes response = 1;
}

service Data {
  rpc Update(StaticData) returns(Empty);
  rpc FunctionUpdate(Function) returns(Empty);
  rpc RuleUpdate(Rule) returns(Empty);
}

service Work {
  rpc EventRecvd(Event) returns(InvokeResult);
  rpc InvokeFun(Invoke) returns(InvokeResult);
}